--- a/static/style.css
+++ b/static/style.css
@@ -13,9 +13,14 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: 'Segoe UI', Arial, sans-serif;
-    margin: 0;
+    margin: 1rem;
     min-height: 100vh;
     line-height: 1.6;
+    text-align: center;
+}
+
+.main {
+    max-width: max(75vw, 600px);
 }
 
 a {
@@ -77,4 +82,29 @@ button:hover, button:focus {
 h1, h2, h3 {
     color: var(--accent-color);
     margin-top: 0;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 1.4rem;
+}
+
+p {
+    font-size: 1.1rem;
+}
+
+nav > a {
+    margin: 1em auto;
+    background: var(--secondary-background-color);
+    border-radius: var(--border-radius);
+    box-shadow: 0 1px 6px #0002;
+    padding: 0.5em;
+}
+
+li {
+    display: inline-block;
+    margin: 5px;
 }
